Bug 1169609 - Avoid all-zero patterns that would trigger the CAIRO_STATUS_INVALID_DASH error state. r=jmuizelaar